Fix spacing in the add communications page (#3229)

--- a/hypha/static_src/src/sass/apply/components/_editor.scss
+++ b/hypha/static_src/src/sass/apply/components/_editor.scss
@@ -12,10 +12,6 @@
     ol {
         list-style: inside decimal;
     }
-
-    @include media-query(tablet-portrait) {
-        max-width: 70%;
-    }
 }
 
 .wmd-button-row {
